--- a/client/src/Components/PayrollManagement/AttendanceMgmt/WeeklyAttendance/WeeklyAttendance.css
+++ b/client/src/Components/PayrollManagement/AttendanceMgmt/WeeklyAttendance/WeeklyAttendance.css
@@ -14,6 +14,42 @@
   .WeeklyTimeProgress .dailyTimeProgress .progress {
     height: 0.5rem;
     margin-top: 0.6rem; }
+    .WeeklyTimeProgress .dailyTimeProgress .progress .tooltipDetails span {
+      background: rgba(0, 0, 0, 0.7);
+      position: absolute;
+      z-index: 9;
+      top: -22px;
+      padding: 5px 10px;
+      border-radius: 5px;
+      display: none; }
+      .WeeklyTimeProgress .dailyTimeProgress .progress .tooltipDetails span b {
+        display: inline-block;
+        text-align: center;
+        border-left: 1px solid rgba(255, 255, 255, 0.5);
+        padding-left: 5px;
+        margin-left: 5px; }
+      .WeeklyTimeProgress .dailyTimeProgress .progress .tooltipDetails span .lateTime {
+        color: #ff5c40; }
+      .WeeklyTimeProgress .dailyTimeProgress .progress .tooltipDetails span .OverTime {
+        color: #17d217; }
+      .WeeklyTimeProgress .dailyTimeProgress .progress .tooltipDetails span::after {
+        content: " ";
+        position: absolute;
+        top: 100%;
+        /* At the bottom of the tooltip */
+        left: 50%;
+        margin-left: -5px;
+        border-width: 5px;
+        border-style: solid;
+        border-color: rgba(0, 0, 0, 0.7) transparent transparent transparent; }
+    .WeeklyTimeProgress .dailyTimeProgress .progress .tooltipDetails .checkIn {
+      left: -45px; }
+    .WeeklyTimeProgress .dailyTimeProgress .progress .tooltipDetails .totalHr {
+      left: 40vw; }
+    .WeeklyTimeProgress .dailyTimeProgress .progress .tooltipDetails .checkOut {
+      right: -45px; }
+    .WeeklyTimeProgress .dailyTimeProgress .progress:hover span {
+      display: block; }
   .WeeklyTimeProgress .dailyTimeProgress .week-off {
     height: 0.3rem; }
     .WeeklyTimeProgress .dailyTimeProgress .week-off .progress-bar {
