--- a/client/src/Components/PayrollManagement/AttendanceMgmt/WeeklyAttendance/WeeklyAttendance.scss
+++ b/client/src/Components/PayrollManagement/AttendanceMgmt/WeeklyAttendance/WeeklyAttendance.scss
@@ -18,6 +18,55 @@
     .progress {
       height: 0.5rem;
       margin-top: 0.6rem;
+
+      .tooltipDetails {
+        span {
+          background: rgba(0, 0, 0, 0.7);
+          position: absolute;
+          z-index: 9;
+          top: -22px;
+          padding: 5px 10px;
+          border-radius: 5px;
+          display: none;
+          b {
+            display: inline-block;
+            text-align: center;
+            border-left: 1px solid rgba(255, 255, 255, 0.5);
+            padding-left: 5px;
+            margin-left: 5px;
+          }
+          .lateTime {
+            color: #ff5c40;
+          }
+          .OverTime {
+            color: #17d217;
+          }
+          &::after {
+            content: " ";
+            position: absolute;
+            top: 100%; /* At the bottom of the tooltip */
+            left: 50%;
+            margin-left: -5px;
+            border-width: 5px;
+            border-style: solid;
+            border-color: rgba(0, 0, 0, 0.7) transparent transparent transparent;
+          }
+        }
+        .checkIn {
+          left: -45px;
+        }
+        .totalHr {
+          left: 40vw;
+        }
+        .checkOut {
+          right: -45px;
+        }
+      }
+      &:hover {
+        span {
+          display: block;
+        }
+      }
     }
     .week-off {
       height: 0.3rem;
