--- a/client/src/Components/AdministrationSetup/ScreenAssignment/screen_assignment.scss
+++ b/client/src/Components/AdministrationSetup/ScreenAssignment/screen_assignment.scss
@@ -4,7 +4,6 @@
     overflow-x: hidden;
     overflow-y: auto;
     border-radius: 5px;
-    max-height: 40vh;
 
     /* reset our lists to remove bullet points and padding */
     .mainmenu,
@@ -12,10 +11,16 @@
       list-style: none;
       padding: 0;
       margin: 0;
+      font-size: 0.8rem;
     }
 
+    .activeLi {
+      background: #33b8bc;
+    }
     /* make ALL links (main and submenu) have padding and background color */
     .mainmenu {
+      min-height: 49vh;
+      max-height: 48vh;
       li {
         display: block;
         text-decoration: none;
@@ -25,15 +30,32 @@
 
         /* add hover behaviour */
         &:hover {
-          background: #33b8bc;
-          color: #fff;
+          background: #e9e9e9;
           .submenu {
             display: block;
-            max-height: 200px;
           }
         }
         &:last-child {
+          //border-bottom: 0;
+        }
+
+        ul.submenu {
+          overflow: hidden;
+          -webkit-transition: all 0.5s ease-out;
+          /* background: #efefef; */
+          border-top: 1px dashed #d3d3d3;
           border-bottom: 0;
+          margin-left: 32px;
+          border-left: 1px solid #d3d3d3;
+          li {
+            &:hover {
+              background-color: #33b8bc;
+              color: #fff;
+            }
+            &:last-child {
+              border-bottom: 0 !important;
+            }
+          }
         }
       }
 
@@ -47,26 +69,13 @@
       }
     }
 
-    .submenu {
-      overflow: hidden;
-      -webkit-transition: all 0.5s ease-out;
-      /* background: #efefef; */
-      border-top: 1px dashed #d3d3d3;
-      margin-left: 34px;
-      border-left: 1px solid #d3d3d3;
-      li {
-        &:hover {
-          background-color: #238286;
-          color: #fff;
-        }
-        &:last-child {
-          border-bottom: 0;
-        }
-      }
-    }
-
     /* this is the initial state of all submenus.
       we set it to max-height: 0, and hide the overflowed content.
     */
+  }
+  #AlgaehElementsGrid_Cntr {
+    .ReactTable {
+      max-height: 49vh !important;
+    }
   }
 }
