--- a/client/src/Components/PayrollManagement/AttendanceMgmt/MonthlyAttendance/MonthlyAttendance.css
+++ b/client/src/Components/PayrollManagement/AttendanceMgmt/MonthlyAttendance/MonthlyAttendance.css
@@ -1,2 +1,5 @@
 #monthlyAttendenceGrid_Cntr .ReactTable {
-  max-height: 30vh !important; }
+  max-height: 37vh !important; }
+
+#EmployeeLeaveBalance_Cntr .ReactTable {
+  max-height: 20vh !important; }
