--- a/client/src/Components/PayrollManagement/AttendanceMgmt/MonthlyAttendance/MonthlyAttendance.scss
+++ b/client/src/Components/PayrollManagement/AttendanceMgmt/MonthlyAttendance/MonthlyAttendance.scss
@@ -1,5 +1,10 @@
 #monthlyAttendenceGrid_Cntr {
   .ReactTable {
-    max-height: 30vh !important;
+    max-height: 37vh !important;
+  }
+}
+#EmployeeLeaveBalance_Cntr {
+  .ReactTable {
+    max-height: 20vh !important;
   }
 }
