--- a/client/src/Components/EmployeeManagement/SelfService/SelfService.scss
+++ b/client/src/Components/EmployeeManagement/SelfService/SelfService.scss
@@ -11,6 +11,7 @@
       div {
         float: left;
         color: #858585;
+        overflow: hidden;
       }
 
       .backBtn {
@@ -30,12 +31,14 @@
 
       .EmployeeImg {
         margin: 1px 10px;
-        border-radius: 4px;
-        border: 1px solid #e1e1e1;
-        img {
-          height: 95px;
-          border-radius: 4px;
-          overflow: hidden;
+
+        .image-drop-area {
+          min-height: 100px;
+          max-height: 100px;
+          img {
+            height: 100px;
+            width: auto;
+          }
         }
       }
       .EmployeeName {
