--- a/client/src/Components/EmployeeManagement/EmployeeMasterIndex/employee_master_index.scss
+++ b/client/src/Components/EmployeeManagement/EmployeeMasterIndex/employee_master_index.scss
@@ -1,5 +1,17 @@
 #employeeIndexGrid {
   .ReactTable {
     max-height: 70vh !important;
+    .image-drop-area {
+      margin: auto;
+      min-height: 80px !important;
+      height: 80px !important;
+      width: 80px !important;
+      .dropzone {
+        img {
+          width: 100%;
+          height: 78px;
+        }
+      }
+    }
   }
 }
