--- a/client/src/Components/AppointmentAr/AppointmentAr.css
+++ b/client/src/Components/AppointmentAr/AppointmentAr.css
@@ -134,12 +134,16 @@
     width: 75%; }
   .doctorApp-Ar .appointment .tg {
     display: inline-block;
-    margin-left: 5px;
-    margin-right: 0;
-    vertical-align: top;
+    padding: 8px;
+    padding-bottom: 0;
+    padding-right: 0;
+    -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
     margin-bottom: 10px;
-    border-bottom: 1px solid #d3d3d3; }
+    border-bottom: 1px solid #d3d3d3;
+    background: #fff;
+    margin-left: 5px;
+    border-radius: 5px; }
     .doctorApp-Ar .appointment .tg thead tr {
       text-align: center; }
       .doctorApp-Ar .appointment .tg thead tr .tg-amwm {
