--- a/client/src/Components/EmployeeManagement/AttendanceRegularization/AttendanceRegularization.css
+++ b/client/src/Components/EmployeeManagement/AttendanceRegularization/AttendanceRegularization.css
@@ -1,2 +1,4 @@
 .hptl-AttendanceRegularization-form {
   margin: 0 0 15px; }
+  .hptl-AttendanceRegularization-form #Attendance_Regularization_Cntr .ReactTable {
+    max-height: 70vh !important; }
