--- a/client/src/Components/EmployeeManagement/AttendanceRegularization/AttendanceRegularization.scss
+++ b/client/src/Components/EmployeeManagement/AttendanceRegularization/AttendanceRegularization.scss
@@ -1,3 +1,8 @@
 .hptl-AttendanceRegularization-form {
   margin: 0 0 15px;
+  #Attendance_Regularization_Cntr {
+    .ReactTable {
+      max-height: 70vh !important;
+    }
+  }
 }
