--- a/client/src/Components/PatientProfile/PatientHistory/PatientHistory.css
+++ b/client/src/Components/PatientProfile/PatientHistory/PatientHistory.css
@@ -12,7 +12,7 @@
 
 @media screen and (min-width: 481px) and (max-width: 1024px) and (orientation: landscape) {
   #subjectAccordian .accordion-btn {
-    width: 86.5%; } }
+    width: 86.2%; } }
 
 #subjectAccordian textarea {
   border-radius: 0 !important;
@@ -40,8 +40,8 @@
   overflow: hidden;
   max-height: 0;
   transition: max-height 0.2s ease-out;
-  margin-left: 5px;
-  margin-right: 5px; }
+  padding-left: 5px;
+  padding-right: 5px; }
 
 #subjectAccordian .customTable th {
   background: #8c8c8c;
@@ -70,3 +70,9 @@
     color: #fff;
     text-align: center;
     border: none; }
+
+.textArea {
+  background: #f9f9f9 !important;
+  height: 30vh;
+  margin-top: 15px;
+  margin-bottom: 15px; }
