--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -493,7 +493,7 @@ $forntSize: 0.7rem;
 
   /* Portlet */
   .portlet {
-    background: #fff;
+    background: rgba(255, 255, 255, 0.75);
     padding: 15px;
     border-radius: 5px;
   }
