--- a/client/src/Components/PatientProfile/patientprofile.css
+++ b/client/src/Components/PatientProfile/patientprofile.css
@@ -23,10 +23,16 @@
     margin: 1px 10px;
     border-radius: 4px;
     border: 1px solid #e1e1e1; }
-    .patientProfile .patientInfo-Top .patientImg img {
-      height: 55px;
-      border-radius: 4px;
-      overflow: hidden; }
+    .patientProfile .patientInfo-Top .patientImg .image-drop-area {
+      border: 1px solid #93a4ad;
+      min-height: 55px;
+      position: relative;
+      background-color: #eaeaea; }
+      .patientProfile .patientInfo-Top .patientImg .image-drop-area img {
+        height: 55px;
+        width: auto;
+        border-radius: 4px;
+        overflow: hidden; }
   .patientProfile .patientInfo-Top .patientName {
     max-width: 230px;
     margin-top: 2px;
