--- a/client/src/index.css
+++ b/client/src/index.css
@@ -330,7 +330,7 @@
     cursor: pointer;
     margin-top: 10px; }
   :global .portlet {
-    background: #fff;
+    background: rgba(255, 255, 255, 0.75);
     padding: 15px;
     border-radius: 5px; }
   :global .portlet.portlet-gray {
