--- a/client/src/Components/MRD/PatientMRD/patient_mrd.css
+++ b/client/src/Components/MRD/PatientMRD/patient_mrd.css
@@ -26,7 +26,12 @@
     .patient-mrd .patientProfile .patientInfo-Top .patientImg img {
       height: 55px;
       border-radius: 4px;
-      overflow: hidden; }
+      overflow: hidden;
+      -webkit-transition: height 2s;
+      /* For Safari 3.1 to 6.0 */
+      transition: height 2s; }
+      .patient-mrd .patientProfile .patientInfo-Top .patientImg img:hover {
+        height: 175px; }
   .patient-mrd .patientProfile .patientInfo-Top .patientName {
     max-width: 230px;
     margin-top: 2px;
