--- a/client/src/Components/MRD/PatientMRD/patient_mrd.scss
+++ b/client/src/Components/MRD/PatientMRD/patient_mrd.scss
@@ -36,6 +36,11 @@
           height: 55px;
           border-radius: 4px;
           overflow: hidden;
+          -webkit-transition: height 2s; /* For Safari 3.1 to 6.0 */
+          transition: height 2s;
+          &:hover {
+            height: 175px;
+          }
         }
       }
       .patientName {
