--- a/client/src/Components/PatientProfile/patientprofile.css
+++ b/client/src/Components/PatientProfile/patientprofile.css
@@ -32,7 +32,12 @@
         height: 55px;
         width: auto;
         border-radius: 4px;
-        overflow: hidden; }
+        overflow: hidden;
+        -webkit-transition: height 0.2s;
+        /* For Safari 3.1 to 6.0 */
+        transition: height 0.1s; }
+        .patientProfile .patientInfo-Top .patientImg .image-drop-area img:hover {
+          height: 175px; }
   .patientProfile .patientInfo-Top .patientName {
     max-width: 230px;
     margin-top: 2px;
