--- a/client/src/Components/PatientProfile/patientprofile.scss
+++ b/client/src/Components/PatientProfile/patientprofile.scss
@@ -42,6 +42,11 @@
           width: auto;
           border-radius: 4px;
           overflow: hidden;
+          -webkit-transition: height 0.2s; /* For Safari 3.1 to 6.0 */
+          transition: height 0.1s;
+          &:hover {
+            height: 175px;
+          }
         }
       }
     }
