--- a/client/src/Components/MRD/PatientMRD/patient_mrd.css
+++ b/client/src/Components/MRD/PatientMRD/patient_mrd.css
@@ -31,7 +31,8 @@
       /* For Safari 3.1 to 6.0 */
       transition: height 0.3s; }
       .patient-mrd .patientProfile .patientInfo-Top .patientImg img:hover {
-        height: 175px; }
+        height: 175px;
+        box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.2); }
   .patient-mrd .patientProfile .patientInfo-Top .patientName {
     max-width: 230px;
     margin-top: 2px;
