--- a/client/src/Components/MRD/PatientMRD/patient_mrd.scss
+++ b/client/src/Components/MRD/PatientMRD/patient_mrd.scss
@@ -40,6 +40,7 @@
           transition: height 0.3s;
           &:hover {
             height: 175px;
+            box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.2);
           }
         }
       }
