--- a/client/src/Components/PatientProfile/patientprofile.css
+++ b/client/src/Components/PatientProfile/patientprofile.css
@@ -35,9 +35,11 @@
         overflow: hidden;
         -webkit-transition: height 0.3s;
         /* For Safari 3.1 to 6.0 */
-        transition: height 0.3s; }
+        transition: height 0.3s;
+        border-radius: 0; }
         .patientProfile .patientInfo-Top .patientImg .image-drop-area img:hover {
-          height: 175px; }
+          height: 175px;
+          box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.2); }
   .patientProfile .patientInfo-Top .patientName {
     max-width: 230px;
     margin-top: 2px;
