--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -28,23 +28,19 @@ $forntSize: 0.7rem;
 
   //Reports Styles
   .print-body {
+    // width: 98%;
+    // margin: 10px auto;
+    // padding: 10px;
+    // border: 1px solid #e4e4e4;
+    // box-sizing: border-box;
+    // box-shadow: 0 3px 10px #ececec;
+    // background: #fff;
     body {
-      margin: 0;
+      margin: 10px;
       padding: 0;
       color: #3d3d3d;
       font-size: 0.8rem;
       background: #f2f2f2;
-    }
-
-    /*Main Print Only CSS*/
-    .print-body {
-      width: 98%;
-      margin: 10px auto;
-      padding: 10px;
-      border: 1px solid #e4e4e4;
-      box-sizing: border-box;
-      box-shadow: 0 3px 10px #ececec;
-      background: #fff;
     }
 
     /*Header Only CSS*/
