--- a/client/src/Components/PatientProfile/ChiefComplaints/chiefcomplaints.scss
+++ b/client/src/Components/PatientProfile/ChiefComplaints/chiefcomplaints.scss
@@ -5,7 +5,7 @@
 }
 #hpi-grid-popup-cntr {
   .ReactTable {
-    max-height: 315px !important;
+    max-height: 50vh !important;
   }
 }
 .selectedChiefComp {
