--- a/client/src/Components/PreApproval/PreApproval.css
+++ b/client/src/Components/PreApproval/PreApproval.css
@@ -7,3 +7,6 @@
   padding: 0;
   padding-top: 20px;
   cursor: pointer; }
+
+.hptl-pre-approval-details #preApprovalGird_Cntr .ReactTable {
+  max-height: 70vh !important; }
