--- a/client/src/Components/DoctorsWorkbench/doctor_workbench.scss
+++ b/client/src/Components/DoctorsWorkbench/doctor_workbench.scss
@@ -137,6 +137,7 @@
         padding: 3px 0;
         list-style: none;
         border: 1px solid #f2f2f2;
+        background: #fff;
         border-radius: 5px;
         .op-sec-1 {
           width: 10px;
@@ -144,7 +145,7 @@
           vertical-align: text-top;
           display: inline-block;
           text-align: center;
-          border-right: 1px solid grey;
+          border-right: 1px dashed #e6e6e6;
           margin-right: 10px;
           i {
             width: 30px;
