--- a/client/src/Components/PatientProfile/ChiefComplaints/chiefcomplaints.css
+++ b/client/src/Components/PatientProfile/ChiefComplaints/chiefcomplaints.css
@@ -2,7 +2,7 @@
   max-height: 215px !important; }
 
 #hpi-grid-popup-cntr .ReactTable {
-  max-height: 315px !important; }
+  max-height: 50vh !important; }
 
 .selectedChiefComp {
   background-color: #dffbfd !important; }
