--- a/client/src/Components/PreApproval/PreApproval.scss
+++ b/client/src/Components/PreApproval/PreApproval.scss
@@ -10,4 +10,9 @@
     padding-top: 20px;
     cursor: pointer;
   }
+  #preApprovalGird_Cntr {
+    .ReactTable {
+      max-height: 70vh !important;
+    }
+  }
 }
