Updated UI Tweak in EOS Screen and Final Settlement Screen Partially done

--- a/client/src/Components/PayrollManagement/ExitManagement/FinalSettlement/FinalSettlement.css
+++ b/client/src/Components/PayrollManagement/ExitManagement/FinalSettlement/FinalSettlement.css
@@ -1,7 +1,7 @@
-.EOSGratuityScreen .algaehLabelFormGroup {
+.FinalSettlementScreen .algaehLabelFormGroup {
   margin-bottom: 0; }
 
-.EOSGratuityScreen .textArea {
+.FinalSettlementScreen .textArea {
   background: #fff !important;
   height: 10vh;
   margin-top: 0;
