--- a/client/src/Components/PayrollManagement/ExitManagement/FinalSettlement/FinalSettlement.scss
+++ b/client/src/Components/PayrollManagement/ExitManagement/FinalSettlement/FinalSettlement.scss
@@ -8,4 +8,11 @@
     margin-top: 0;
     margin-bottom: 0;
   }
+  #Salary_Earning_Cntr,
+  #Employee_Deductions_Cntr,
+  #Employee_Loan_Cntr {
+    .ReactTable {
+      max-height: 25vh !important;
+    }
+  }
 }
