--- a/client/src/Components/PayrollManagement/LeaveManagement/LeaveAuthorization/LeaveAuthorization.css
+++ b/client/src/Components/PayrollManagement/LeaveManagement/LeaveAuthorization/LeaveAuthorization.css
@@ -1,12 +1,17 @@
 #leaveAuthGrid_Cntr .ReactTable {
-  max-height: 23vh !important; }
-
-#currentLeaveAppGrid_Cntr .ReactTable {
-  min-height: 10vh !important;
-  max-height: 10vh !important; }
-  #currentLeaveAppGrid_Cntr .ReactTable .rt-table {
-    overflow: hidden; }
+  max-height: 70vh !important; }
 
 #previousLeaveAppGrid_Cntr .ReactTable {
-  min-height: 14vh !important;
-  max-height: 14vh !important; }
+  max-height: 30vh !important; }
+
+.btnFooter {
+  margin-bottom: 10px; }
+  .btnFooter button {
+    float: right;
+    margin-left: 10px; }
+  .btnFooter button.btn-danger {
+    background: none;
+    color: #dc3545; }
+    .btnFooter button.btn-danger:hover {
+      background: #dc3545;
+      color: #fff; }
