--- a/client/src/styles/site.css
+++ b/client/src/styles/site.css
@@ -122,8 +122,7 @@ body {
     min-width: 100%;
     min-height: 100%; }
     :global .image-drop-area .dropzone img {
-      width: 100%;
-      height: 120px; }
+      width: 100%; }
   :global .image-drop-area .drop-message {
     color: #485a63;
     margin: 8px 0px;
