--- a/client/src/Components/EmployeeManagement/HRSettings/LeaveMasterIndex/LeaveMaster/leave_master.css
+++ b/client/src/Components/EmployeeManagement/HRSettings/LeaveMasterIndex/LeaveMaster/leave_master.css
@@ -6,3 +6,9 @@
   padding-top: 15px;
   padding-bottom: 15px;
   border-top: 1px solid #d3d3d3; }
+
+#leaveRules_grid_cntr .ReactTable,
+#leaveEncashment_grid_cntr .ReactTable,
+#leaveDetails_grid_cntr .ReactTable {
+  max-height: 40vh !important;
+  margin-bottom: 15px; }
