--- a/client/src/styles/site.css
+++ b/client/src/styles/site.css
@@ -519,7 +519,9 @@ body {
     -webkit-transform: rotate(-405deg); } }
 
 :global .hptl-phase1-footer {
-  background: #000;
+  box-shadow: 0 -1px 10px rgba(0, 0, 0, 0.1);
+  background: #35383b;
+  border-top: 1px dashed #e9e9e9;
   position: fixed;
   bottom: 0;
   left: 0;
