Added Leave Salary Accural + Added Leave Category under Leave Master Details

--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -537,11 +537,13 @@ $forntSize: 0.7rem;
     font-weight: 400;
   }
 
-  .caption i {
-    color: #777;
-    font-size: 15px;
-    font-weight: 300;
-    margin-top: 3px;
+  .caption {
+    // i {
+    //   color: #777;
+    //   font-size: 15px;
+    //   font-weight: 300;
+    //   margin-top: 3px;
+    // }
   }
 
   .caption-subject {
