--- a/client/src/Components/PayrollManagement/LoanManagement/LoanAuthorization/loan-auth.scss
+++ b/client/src/Components/PayrollManagement/LoanManagement/LoanAuthorization/loan-auth.scss
@@ -5,9 +5,9 @@
 }
 #requestedLoanAppGrid_Cntr {
   .ReactTable {
-    max-height: 20vh !important;
+    max-height: 40vh !important;
     .rt-table {
-      overflow: hidden;
+      // overflow: hidden;
     }
   }
 }
