--- a/client/src/Components/PayrollManagement/PerformanceManagement/SalaryApprisal/salary_apprsl.scss
+++ b/client/src/Components/PayrollManagement/PerformanceManagement/SalaryApprisal/salary_apprsl.scss
@@ -1,2 +1,16 @@
-.salary_apprsl {
+.SalaryApprisalWrapper {
+  .textArea {
+    height: 90px;
+    margin-bottom: 0;
+    margin-top: 9px;
+    background: #fff !important;
+  }
+  #NewAppraisalEarnings_Cntr,
+  #NewAppraisalContributions_Cntr,
+  #NewAppraisalPerks_Cntr,
+  #NewAppraisalOther_Cntr {
+    .ReactTable {
+      max-height: 20vh !important;
+    }
+  }
 }
