--- a/client/src/Components/PayrollManagement/PerformanceManagement/SalaryApprisal/salary_apprsl.css
+++ b/client/src/Components/PayrollManagement/PerformanceManagement/SalaryApprisal/salary_apprsl.css
@@ -4,8 +4,9 @@
   margin-top: 9px;
   background: #fff !important; }
 
-.SalaryApprisalWrapper #NewAppraisalEarnings_Cntr .ReactTable,
+.SalaryApprisalWrapper #NewAppraisalEarnings_Cntr .ReactTable {
+  max-height: 55vh !important; }
+
 .SalaryApprisalWrapper #NewAppraisalContributions_Cntr .ReactTable,
-.SalaryApprisalWrapper #NewAppraisalPerks_Cntr .ReactTable,
-.SalaryApprisalWrapper #NewAppraisalOther_Cntr .ReactTable {
-  max-height: 20vh !important; }
+.SalaryApprisalWrapper #NewAppraisalDeductions_Cntr .ReactTable {
+  max-height: 18vh !important; }
