--- a/client/src/Components/PayrollManagement/PerformanceManagement/SalaryApprisal/salary_apprsl.scss
+++ b/client/src/Components/PayrollManagement/PerformanceManagement/SalaryApprisal/salary_apprsl.scss
@@ -5,12 +5,16 @@
     margin-top: 9px;
     background: #fff !important;
   }
-  #NewAppraisalEarnings_Cntr,
-  #NewAppraisalContributions_Cntr,
-  #NewAppraisalPerks_Cntr,
-  #NewAppraisalOther_Cntr {
+  #NewAppraisalEarnings_Cntr {
     .ReactTable {
-      max-height: 20vh !important;
+      max-height: 55vh !important;
+    }
+  }
+
+  #NewAppraisalContributions_Cntr,
+  #NewAppraisalDeductions_Cntr {
+    .ReactTable {
+      max-height: 18vh !important;
     }
   }
 }
