--- a/client/src/Components/Wrapper/autoComplete.css
+++ b/client/src/Components/Wrapper/autoComplete.css
@@ -23,6 +23,7 @@
   right: 35px;
   font-size: 0.7rem;
   line-height: 21px;
+  display: none;
   background: -webkit-gradient(linear, left top, right top, from(rgba(255, 255, 255, 0)), color-stop(48%, white));
   background: -webkit-linear-gradient(left, rgba(255, 255, 255, 0) 0%, white 48%);
   background: -o-linear-gradient(left, rgba(255, 255, 255, 0) 0%, white 48%);
