--- a/client/src/Components/Wrapper/autoComplete.scss
+++ b/client/src/Components/Wrapper/autoComplete.scss
@@ -26,6 +26,7 @@
   right: 35px;
   font-size: 0.7rem;
   line-height: 21px;
+  display: none;
   background: -webkit-gradient(
     linear,
     left top,
