Added Payroll Options Transaction and Attendence

--- a/client/src/Components/PayrollManagement/PayrollOptions/AttendanceSettings/AttendanceSettings.css
+++ b/client/src/Components/PayrollManagement/PayrollOptions/AttendanceSettings/AttendanceSettings.css
@@ -1,2 +1,7 @@
-.AttendanceSettings #LateTimeRules_Cntr .ReactTable {
-  max-height: 28vh !important; }
+.TransactionAttendanceScreen .transactionSettings {
+  margin-bottom: 15px; }
+
+.TransactionAttendanceScreen .attendanceSettings {
+  margin-bottom: 60px; }
+  .TransactionAttendanceScreen .attendanceSettings #LateTimeRules_Cntr .ReactTable {
+    max-height: 28vh !important; }
