--- a/client/src/Components/PayrollManagement/PayrollOptions/AttendanceSettings/AttendanceSettings.scss
+++ b/client/src/Components/PayrollManagement/PayrollOptions/AttendanceSettings/AttendanceSettings.scss
@@ -1,7 +1,13 @@
-.AttendanceSettings {
-  #LateTimeRules_Cntr {
-    .ReactTable {
-      max-height: 28vh !important;
+.TransactionAttendanceScreen {
+  .transactionSettings {
+    margin-bottom: 15px;
+  }
+  .attendanceSettings {
+    margin-bottom: 60px;
+    #LateTimeRules_Cntr {
+      .ReactTable {
+        max-height: 28vh !important;
+      }
     }
   }
 }
