Added Grid in End of Service

--- a/client/src/Components/PayrollManagement/PayrollOptions/EndServiceOption/EndServiceOption.scss
+++ b/client/src/Components/PayrollManagement/PayrollOptions/EndServiceOption/EndServiceOption.scss
@@ -4,4 +4,13 @@
     color: lightgrey;
     text-align: center;
   }
+
+  #ResignationEligibility_Cntr,
+  #ResignationMinYear_Cntr,
+  #TerminationEligility_Cntr,
+  #TerminationMinYear_Cntr {
+    .ReactTable {
+      max-height: 25vh !important;
+    }
+  }
 }
