--- a/client/src/Components/PayrollManagement/PayrollOptions/EndServiceOption/EndServiceOption.css
+++ b/client/src/Components/PayrollManagement/PayrollOptions/EndServiceOption/EndServiceOption.css
@@ -2,3 +2,9 @@
   margin-top: 25vh;
   color: lightgrey;
   text-align: center; }
+
+.endServiceOption #ResignationEligibility_Cntr .ReactTable,
+.endServiceOption #ResignationMinYear_Cntr .ReactTable,
+.endServiceOption #TerminationEligility_Cntr .ReactTable,
+.endServiceOption #TerminationMinYear_Cntr .ReactTable {
+  max-height: 25vh !important; }
