--- a/client/src/Components/PayrollManagement/PayrollWorkbench/OvertimeManagement/ot_mgmt.css
+++ b/client/src/Components/PayrollManagement/PayrollWorkbench/OvertimeManagement/ot_mgmt.css
@@ -1,2 +1,5 @@
-.ot_mgmt #OverTimeMgmntGrid_Cntr .ReactTable {
+.ot_mgmt #OverTimeMgmntMonthlyGrid_Cntr .ReactTable {
   max-height: 29vh !important; }
+
+.ot_mgmt #OverTimeMgmntDailyGrid_Cntr .ReactTable {
+  max-height: 39vh !important; }
