--- a/client/src/Components/PayrollManagement/AttendanceMgmt/WeeklyAttendance/WeeklyAttendance.scss
+++ b/client/src/Components/PayrollManagement/AttendanceMgmt/WeeklyAttendance/WeeklyAttendance.scss
@@ -1,97 +1,100 @@
-.weekdaysDiv {
-  i {
-    cursor: pointer;
-    &:hover {
-      color: #34b8bc;
-    }
-  }
-  span {
-    font-size: 0.8rem;
-    margin: 0 10px;
-  }
-}
-.WeeklyTimeProgress {
-  .dailyTimeProgress {
-    border-bottom: 1px dashed rgba(0, 0, 0, 0.2);
-    padding-top: 10px;
-    padding-bottom: 10px;
-    .progress {
-      height: 0.5rem;
-      margin-top: 0.6rem;
-
-      .tooltipDetails {
-        span {
-          background: rgba(0, 0, 0, 0.7);
-          position: absolute;
-          z-index: 9;
-          top: -22px;
-          padding: 2px 5px;
-          border-radius: 5px;
-          display: none;
-          b {
-            display: inline-block;
-            text-align: center;
-            border-left: 1px solid rgba(255, 255, 255, 0.5);
-            padding-left: 5px;
-            margin-left: 5px;
-          }
-          .lateTime {
-            color: #ff5c40;
-          }
-          .OverTime {
-            color: #17d217;
-          }
-          &::after {
-            content: " ";
-            position: absolute;
-            top: 100%; /* At the bottom of the tooltip */
-            left: 50%;
-            margin-left: -5px;
-            border-width: 5px;
-            border-style: solid;
-            border-color: rgba(0, 0, 0, 0.7) transparent transparent transparent;
-          }
-        }
-        .checkIn {
-          left: -45px;
-        }
-        .totalHr {
-          left: 40vw;
-        }
-        .checkOut {
-          right: -45px;
-        }
-      }
+.hrTimeSheet {
+  .weekdaysDiv {
+    i {
+      cursor: pointer;
       &:hover {
-        span {
-          display: block;
-        }
+        color: #34b8bc;
       }
     }
-    .week-off {
-      height: 0.3rem;
-      .progress-bar {
-        background-color: #ffeba0 !important;
-        span {
-          background: #ffffff;
-          width: auto;
-          display: inline-block;
-          padding: 2px 10px;
-          font-size: 0.7rem;
-          margin: auto;
-          position: absolute;
-          left: 39.5vw;
-          border: 1px solid #c3c3c3;
-          color: #202429;
-          border-radius: 5px;
+    span {
+      font-size: 0.8rem;
+      margin: 0 10px;
+    }
+  }
+  .WeeklyTimeProgress {
+    .dailyTimeProgress {
+      border-bottom: 1px dashed rgba(0, 0, 0, 0.2);
+      padding-top: 10px;
+      padding-bottom: 10px;
+      .progress {
+        height: 0.5rem;
+        margin-top: 0.6rem;
+
+        .tooltipDetails {
+          span {
+            background: rgba(0, 0, 0, 0.7);
+            position: absolute;
+            z-index: 9;
+            top: -22px;
+            padding: 2px 5px;
+            border-radius: 5px;
+            display: none;
+            b {
+              display: inline-block;
+              text-align: center;
+              border-left: 1px solid rgba(255, 255, 255, 0.5);
+              padding-left: 5px;
+              margin-left: 5px;
+            }
+            .lateTime {
+              color: #ff5c40;
+            }
+            .OverTime {
+              color: #17d217;
+            }
+            &::after {
+              content: " ";
+              position: absolute;
+              top: 100%; /* At the bottom of the tooltip */
+              left: 50%;
+              margin-left: -5px;
+              border-width: 5px;
+              border-style: solid;
+              border-color: rgba(0, 0, 0, 0.7) transparent transparent
+                transparent;
+            }
+          }
+          .checkIn {
+            left: 15px;
+          }
+          .totalHr {
+            left: 42.5%;
+          }
+          .checkOut {
+            right: 15px;
+          }
+        }
+        &:hover {
+          span {
+            display: block;
+          }
         }
       }
-    }
-    .bg-default {
-      background-color: #e7ecef !important;
-    }
-    &:last-child {
-      border-bottom: none;
+      .week-off {
+        height: 0.3rem;
+        .progress-bar {
+          background-color: #ffeba0 !important;
+          span {
+            background: #ffffff;
+            width: auto;
+            display: inline-block;
+            padding: 2px 10px;
+            font-size: 0.7rem;
+            margin: auto;
+            position: absolute;
+            left: 35.5vw;
+            border: 1px solid #c3c3c3;
+            color: #202429;
+            border-radius: 5px;
+          }
+        }
+      }
+      .bg-default {
+        background-color: #e7ecef !important;
+      }
+      &:last-child {
+        border-bottom: none;
+      }
     }
   }
 }
